modifico archivos y carpetas ademas agrego el shop

--- a/public/pages/shop/carrito.html
+++ b/public/pages/shop/carrito.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../css-fede/Normalize.css"> <!-- falta esto -->
-    <link rel="stylesheet" href="../../css-fede/styleCart.css">
+    <link rel="stylesheet" href="../../estilos/Normalize.css"> <!-- falta esto -->
+    <link rel="stylesheet" href="../../estilos/styleCart.css">
     <title>CARRITO</title>
 </head>
 <body>
