--- a/public/pages/admin/adminListadoProductos.html
+++ b/public/pages/admin/adminListadoProductos.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../css-fede/Normalize.css"> <!-- falta esto -->
-    <link rel="stylesheet" href="../../css-fede/adminListadoProductos (1).css">
+    <link rel="stylesheet" href="../../estilos/Normalize.css"> <!-- falta esto -->
+    <link rel="stylesheet" href="../../estilos/adminListadoProductos.css">
     <script src="https://kit.fontawesome.com/d82e4588df.js" crossorigin="anonymous"></script>
     <title>Funkoshop</title>
 </head>
