modifico algunas rutas

--- a/public/inicio.html
+++ b/public/inicio.html
@@ -26,14 +26,14 @@
     <header>
       <nav class="navbar container">
         <div class="navbar__logo">
-            <a href="../../inicio.html" class="navbar__link-banner">
+            <a href="/public/inicio.html" class="navbar__link-banner">
                 <img src="/public/img/multimedia/branding/logo_light_horizontal.svg" alt="logo_FUNKOSHOP" class="navbar__img">
             </a>
         </div>
     
         <ul class="navbar__list">
             <li class="navbar__item navbar__item--with-submenu">
-                <a href="#" class="navbar__link navbar__link--icon">SHOP<i class="fa-solid fa-angle-right icon-animation " class="navbar__icon"></i></a>
+                <a href="/public/pages/shop/shop.html" class="navbar__link navbar__link--icon">SHOP<i class="fa-solid fa-angle-right icon-animation " class="navbar__icon"></i></a>
                 <ul class="submenu">
                     <li class="submenu__item">
                         <a href="../pages/index.html" class="submenu__link">FUNKOS</a>
@@ -47,13 +47,13 @@
                 </ul>
             </li>
             <li class="navbar__item">
-                <a href="#" class="navbar__link">CONTACTO</a>
+                <a href="/public/pages/shop/contacto.html" class="navbar__link">CONTACTO</a>
             </li>
             <li class="navbar__item">
-                <a href="../pages/Login.html" class="navbar__link">LOGIN</a>
+                <a href="/public/pages/admin/login.html" class="navbar__link">LOGIN</a>
             </li>
             <li class="navbar__item">
-                <a href="../pages/Carrito.html" class="navbar__link">
+                <a href="/public/pages/shop/carrito.html" class="navbar__link">
                     <i class="fa-solid fa-cart-shopping"></i>
                     <span class="navbar__item-cart">0</span>
                 </a>
