--- a/public/pages/admin/adminListadoProductos.html
+++ b/public/pages/admin/adminListadoProductos.html
@@ -19,7 +19,7 @@
         
             <ul class="navbar__list">
                 <li class="navbar__item navbar__item--with-submenu">
-                    <a href="#" class="navbar__link navbar__link--icon">SHOP<i class="fa-solid fa-angle-right icon-animation " class="navbar__icon"></i></a>
+                    <a href="/public/pages/shop/shop.html" class="navbar__link navbar__link--icon">SHOP<i class="fa-solid fa-angle-right icon-animation " class="navbar__icon"></i></a>
                     <ul class="submenu">
                         <li class="submenu__item">
                             <a href="../../inicio.html" class="submenu__link">FUNKOS</a>
@@ -84,7 +84,7 @@
                     <p class="listProducts__text-info" id="Código">SWT001001</p>
                     <p class="listProducts__text-info" id="Nombre-del-Producto">Baby Yoda Blueball </p>
                     <p class="listProducts__text-info" id="Categoria">STAR WARS</p>
-                    <a href="#" class="listProducts__edit-link ">
+                    <a href="/public/pages/admin/editar-item.html" class="listProducts__edit-link ">
                         <i class="fa-solid fa-pen listProducts__edit-bottom"></i>
                     </a>
                     <i class="fa-solid fa-trash listProducts__delete-info"></i>
@@ -103,7 +103,7 @@
                     <p class="listProducts__text-info" id="Nombre-del-Producto">Boba Fett Fighter
                     </p>
                     <p class="listProducts__text-info" id="Categoria">STAR WARS</p>
-                    <a href="#" class="listProducts__edit-link ">
+                    <a href="/public/pages/admin/editar-item.html" class="listProducts__edit-link ">
                         <i class="fa-solid fa-pen listProducts__edit-bottom"></i>
                     </a>
                     <i class="fa-solid fa-trash listProducts__delete-info"></i>
@@ -121,7 +121,7 @@
                     <p class="listProducts__text-info" id="Código">SWT001003</p>
                     <p class="listProducts__text-info" id="Nombre-del-Producto">Luke Skylwalker & Grogu</p>
                     <p class="listProducts__text-info" id="Categoria">STAR WARS</p>
-                    <a href="#" class="listProducts__edit-link ">
+                    <a href="/public/pages/admin/editar-item.html" class="listProducts__edit-link ">
                         <i class="fa-solid fa-pen listProducts__edit-bottom"></i>
                     </a>
                     <i class="fa-solid fa-trash listProducts__delete-info"></i>
@@ -139,7 +139,7 @@
                     <p class="listProducts__text-info" id="Código">SWT001004</p>
                     <p class="listProducts__text-info" id="Nombre-del-Producto">Stormtrooper Lightsaber</p>
                     <p class="listProducts__text-info" id="Categoria">STAR WARS</p>
-                    <a href="#" class="listProducts__edit-link ">
+                    <a href="/public/pages/admin/editar-item.html" class="listProducts__edit-link ">
                         <i class="fa-solid fa-pen listProducts__edit-bottom"></i>
                     </a>
                     <i class="fa-solid fa-trash listProducts__delete-info"></i>
@@ -157,7 +157,7 @@
                     <p class="listProducts__text-info" id="Código">PKM001001</p>
                     <p class="listProducts__text-info" id="Nombre-del-Producto">Charmander Smiley</p>
                     <p class="listProducts__text-info" id="Categoria">POKEMON</p>
-                    <a href="#" class="listProducts__edit-link ">
+                    <a href="/public/pages/admin/editar-item.html" class="listProducts__edit-link ">
                         <i class="fa-solid fa-pen listProducts__edit-bottom"></i>
                     </a>
                     <i class="fa-solid fa-trash listProducts__delete-info"></i>
@@ -175,7 +175,7 @@
                     <p class="listProducts__text-info" id="Código">PKM001002</p>
                     <p class="listProducts__text-info" id="Nombre-del-Producto">Dragonite Hi!</p>
                     <p class="listProducts__text-info" id="Categoria">POKEMON</p>
-                    <a href="#" class="listProducts__edit-link ">
+                    <a href="/public/pages/admin/editar-item.html" class="listProducts__edit-link ">
                         <i class="fa-solid fa-pen listProducts__edit-bottom"></i>
                     </a>
                     <i class="fa-solid fa-trash listProducts__delete-info"></i>
@@ -193,7 +193,7 @@
                     <p class="listProducts__text-info" id="Código">PKM001003</p>
                     <p class="listProducts__text-info" id="Nombre-del-Producto">Pidgeotto Flying</p>
                     <p class="listProducts__text-info" id="Categoria">POKEMON</p>
-                    <a href="#" class="listProducts__edit-link ">
+                    <a href="/public/pages/admin/editar-item.html" class="listProducts__edit-link ">
                         <i class="fa-solid fa-pen listProducts__edit-bottom"></i>
                     </a>
                     <i class="fa-solid fa-trash listProducts__delete-info"></i>
@@ -211,7 +211,7 @@
                     <p class="listProducts__text-info" id="Código">PKM001004</p>
                     <p class="listProducts__text-info" id="Nombre-del-Producto">Pikachu Smiley</p>
                     <p class="listProducts__text-info" id="Categoria">POKEMON</p>
-                    <a href="#" class="listProducts__edit-link ">
+                    <a href="/public/pages/admin/editar-item.html" class="listProducts__edit-link ">
                         <i class="fa-solid fa-pen listProducts__edit-bottom"></i>
                     </a>
                     <i class="fa-solid fa-trash listProducts__delete-info"></i>
@@ -229,7 +229,7 @@
                     <p class="listProducts__text-info" id="Código">PKM001005</p>
                     <p class="listProducts__text-info" id="Nombre-del-Producto">Vulpix Fancy </p>
                     <p class="listProducts__text-info" id="Categoria">POKEMON</p>
-                    <a href="#" class="listProducts__edit-link ">
+                    <a href="/public/pages/admin/editar-item.html" class="listProducts__edit-link ">
                         <i class="fa-solid fa-pen listProducts__edit-bottom"></i>
                     </a>
                     <i class="fa-solid fa-trash listProducts__delete-info"></i>
@@ -247,7 +247,7 @@
                     <p class="listProducts__text-info" id="Código">HPT001001</p>
                     <p class="listProducts__text-info" id="Nombre-del-Producto">Harry Potter & Hegwid</p>
                     <p class="listProducts__text-info" id="Categoria">HARRY POTTER</p>
-                    <a href="#" class="listProducts__edit-link ">
+                    <a href="/public/pages/admin/editar-item.html" class="listProducts__edit-link ">
                         <i class="fa-solid fa-pen listProducts__edit-bottom"></i>
                     </a>
                     <i class="fa-solid fa-trash listProducts__delete-info"></i>
@@ -265,7 +265,7 @@
                     <p class="listProducts__text-info" id="Código">HPT001002</p>
                     <p class="listProducts__text-info" id="Nombre-del-Producto">Herminione Ball Dress </p>
                     <p class="listProducts__text-info" id="Categoria">HARRY POTTER</p>
-                    <a href="#" class="listProducts__edit-link ">
+                    <a href="/public/pages/admin/editar-item.html" class="listProducts__edit-link ">
                         <i class="fa-solid fa-pen listProducts__edit-bottom"></i>
                     </a>
                     <i class="fa-solid fa-trash listProducts__delete-info"></i>
@@ -283,7 +283,7 @@
                     <p class="listProducts__text-info" id="Código">HPT001003</p>
                     <p class="listProducts__text-info" id="Nombre-del-Producto">Luna Lovegood Lion Mask </p>
                     <p class="listProducts__text-info" id="Categoria">HARRY POTTER</p>
-                    <a href="#" class="listProducts__edit-link ">
+                    <a href="/public/pages/admin/editar-item.html" class="listProducts__edit-link ">
                         <i class="fa-solid fa-pen listProducts__edit-bottom"></i>
                     </a>
                     <i class="fa-solid fa-trash listProducts__delete-info"></i>
@@ -301,7 +301,7 @@
                     <p class="listProducts__text-info" id="Código">HPT001004</p>
                     <p class="listProducts__text-info" id="Nombre-del-Producto">Snape Patronus </p>
                     <p class="listProducts__text-info" id="Categoria">HARRY POTTER</p>
-                    <a href="#" class="listProducts__edit-link ">
+                    <a href="/public/pages/admin/editar-item.html" class="listProducts__edit-link ">
                         <i class="fa-solid fa-pen listProducts__edit-bottom"></i>
                     </a>
                     <i class="fa-solid fa-trash listProducts__delete-info"></i>
@@ -337,6 +337,6 @@
         </div>
     </footer> 
 
-    <script src="../../css-fede/adminListadoProductos (1).css"></script>
+    <script src="/public/js-fede/ListadoDeProducto.js"></script>
 </body>
 </html>
