--- a/public/pages/admin/editar-item.html
+++ b/public/pages/admin/editar-item.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/Normalize.css"> <!-- falta esto -->
+    <link rel="stylesheet" href="/public/estilos/Normalize.css"> <!-- falta esto -->
     <link rel="stylesheet" href="../../estilos/editar-item.css">
     <script src="https://kit.fontawesome.com/d82e4588df.js" crossorigin="anonymous"></script>
     <title>Edit</title>
@@ -20,13 +20,13 @@
  
             <ul class="navbar__list">
                 <li class="navbar__item">
-                    <a href="#" class="navbar__link">VER TIENDA</a>
+                    <a href="/public/pages/shop/shop.html" class="navbar__link">VER TIENDA</a>
                 </li>
                 <li class="navbar__item">
-                    <a href="../pages/Login.html" class="navbar__link">ADMIN</a>
+                    <a href="../admin/adminListadoProductos.html" class="navbar__link">ADMIN</a>
                 </li>
                 <li class="navbar__item">
-                    <a href="../pages/Carrito.html" class="navbar__link">SALIR</a>
+                    <a href="/public/inicio.html" class="navbar__link">SALIR</a>
                     </a>
                 </li>
             </ul>
@@ -97,13 +97,13 @@
             <nav class="footer__navbar navbar">
                 <ul class="footer__list navbar__list">
                     <li class="footer__item">
-                        <a href="Shop.html" class="footer__link navbar__link"> SHOP</a>
+                        <a href="/public/pages/shop/shop.html" class="footer__link navbar__link"> SHOP</a>
                     </li>
                     <li class="footer__item">
-                        <a href="./Login.html" class="footer__link navbar__link">INGRESAR</a>
+                        <a href="/public/pages/admin/login.html" class="footer__link navbar__link">INGRESAR</a>
                     </li>
                     <li class="footer__item">
-                        <a href="./Contact.html" class="footer__link navbar__link"">CONTACTO</a>
+                        <a href="/public/pages/shop/contacto.html" class="footer__link navbar__link"">CONTACTO</a>
                     </li>
                 </ul>
             </nav>
