--- a/public/pages/admin/login.html
+++ b/public/pages/admin/login.html
@@ -37,7 +37,7 @@
                     <a class="nabvar__link" href="">ADMIN</a>
                 </li>
                 <li class="nabvar__item">
-                    <a class="nabvar__link" href="">SALIR</a>
+                    <a class="nabvar__link" href="/public/inicio.html">SALIR</a>
                 </li>
                 <li class="nabvar__item">
                     <a class="nabvar__cart" href="../shop/carrito.html"><img src="../../img/multimedia/icons/cart-icon.svg"
