--- a/public/pages/admin/register.html
+++ b/public/pages/admin/register.html
@@ -29,24 +29,13 @@
         
             <ul class="navbar__list">
                 <li class="navbar__item navbar__item--with-submenu">
-                    <a href="/public/pages/shop/shop.html" class="navbar__link navbar__link--icon">SHOP<i class="fa-solid fa-angle-right icon-animation " class="navbar__icon"></i></a>
-                    <ul class="submenu">
-                        <li class="submenu__item">
-                            <a href="#" class="submenu__link">FUNKOS</a>
-                        </li>
-                        <li class="submenu__item">
-                            <a href="#" class="submenu__link">LLAVEROS</a>
-                        </li>
-                        <li class="submenu__item">
-                            <a href="#" class="submenu__link">REMERAS</a>
-                        </li>
-                    </ul>
+                    <a href="/public/pages/shop/shop.html" class="navbar__link navbar__link--icon">VER TIENDA</a>
                 </li>
                 <li class="navbar__item">
-                    <a href="contacto.html" class="navbar__link">CONTACTO</a>
+                    <a href="./adminListadoProductos.html" class="navbar__link">ADMIN</a>
                 </li>
                 <li class="navbar__item">
-                    <a href="../admin/login.html" class="navbar__link">LOGIN</a>
+                    <a href="/public/inicio.html" class="navbar__link">SALIR</a>
                 </li>
             </ul>
         </nav>
