--- a/public/pages/shop/carrito.html
+++ b/public/pages/shop/carrito.html
@@ -18,7 +18,7 @@
         
             <ul class="navbar__list">
                 <li class="navbar__item navbar__item--with-submenu">
-                    <a href="#" class="navbar__link navbar__link--icon">SHOP<i class="fa-solid fa-angle-right icon-animation " class="navbar__icon"></i></a>
+                    <a href="./shop.html" class="navbar__link navbar__link--icon">SHOP<i class="fa-solid fa-angle-right icon-animation " class="navbar__icon"></i></a>
                     <ul class="submenu">
                         <li class="submenu__item">
                             <a href="#" class="submenu__link">FUNKOS</a>
@@ -38,7 +38,7 @@
                     <a href="../admin/login.html" class="navbar__link">LOGIN</a>
                 </li>
                 <li class="navbar__item">
-                    <a href="../pages/Carrito.html" class="navbar__link">
+                    <a href="./carrito.html" class="navbar__link">
                         <i class="fa-solid fa-cart-shopping"></i>
                         <span class="navbar__item-cart">0</span>
                     </a>
