--- a/public/pages/shop/item.html
+++ b/public/pages/shop/item.html
@@ -26,7 +26,7 @@
     
         <ul class="navbar__list">
             <li class="navbar__item navbar__item--with-submenu">
-                <a href="#" class="navbar__link navbar__link--icon">SHOP<i class="fa-solid fa-angle-right icon-animation " class="navbar__icon"></i></a>
+                <a href="./shop.html" class="navbar__link navbar__link--icon">SHOP<i class="fa-solid fa-angle-right icon-animation " class="navbar__icon"></i></a>
                 <ul class="submenu">
                     <li class="submenu__item">
                         <a href="..//shop/shop.html" class="submenu__link">FUNKOS</a>
