se corrigieron rutas, footer inicio

--- a/public/inicio.html
+++ b/public/inicio.html
@@ -26,7 +26,7 @@
     <header>
       <nav class="navbar container">
         <div class="navbar__logo">
-            <a href="/public/inicio.html" class="navbar__link-banner">
+            <a href="../public/pages/shop/shop.html" class="navbar__link-banner">
                 <img src="/public/img/multimedia/branding/logo_light_horizontal.svg" alt="logo_FUNKOSHOP" class="navbar__img">
             </a>
         </div>
@@ -226,18 +226,20 @@
           <nav class="footer__navbar navbar">
               <ul class="footer__list navbar__list">
                   <li class="footer__item">
-                      <a href="../shop/shop.html" class="footer__link navbar__link"> SHOP</a>
+                      <a href="../public/pages/shop/shop.html" class="footer__link navbar__link"> SHOP</a>
                   </li>
                   <li class="footer__item">
-                      <a href="../admin/login.html" class="footer__link navbar__link">INGRESAR</a>
+                      <a href="../public/pages/admin/login.html" class="footer__link navbar__link">INGRESAR</a>
                   </li>
                   <li class="footer__item">
-                      <a href="../shop/contacto.html" class="footer__link navbar__link"">CONTACTO</a>
+                      <a href="../public/pages/shop/contacto.html" class="footer__link navbar__link">CONTACTO</a>
                   </li>
               </ul>
           </nav>
           <div class="footer__rights">
               <p class="footer__text">All rights reserved 2023 - Funkoshop &copy;</p>
+              <p class="footer__text">CODO A CODO - Curso Java Script-Node JS</p>
+              <p class="footer__text"> Comision 23568 Grupo 7</p>
           </div>
           <div class="footer__logo ">
               <img src="../public/img/multimedia/branding/isotype.svg" alt="logo_FUNKOSHOP" class="footer__img">
