--- a/public/pages/admin/login.html
+++ b/public/pages/admin/login.html
@@ -34,7 +34,7 @@
                
 
                 <li class="nabvar__item">
-                    <a class="nabvar__link" href="">ADMIN</a>
+                    <a class="nabvar__link" href="register.html">ADMIN</a>
                 </li>
                 <li class="nabvar__item">
                     <a class="nabvar__link" href="/public/inicio.html">SALIR</a>
