--- a/public/inicio.html
+++ b/public/inicio.html
@@ -11,7 +11,7 @@
       name="keywords"
       content="Tienda Funkoshop, articulos de las sagas Star Wars, Pockemon, Harry Potter. Funkos, Remeras, Llaveros"
     />
-    <title>Home Funkoshop</title>
+    <title>Home-Funkoshop</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
