--- a/public/pages/shop/carrito.html
+++ b/public/pages/shop/carrito.html
@@ -120,12 +120,14 @@
                         <a href="../admin/login.html" class="footer__link navbar__link">INGRESAR</a>
                     </li>
                     <li class="footer__item">
-                        <a href="../shop/contacto.html" class="footer__link navbar__link"">CONTACTO</a>
+                        <a href="../shop/contacto.html" class="footer__link navbar__link">CONTACTO</a>
                     </li>
                 </ul>
             </nav>
             <div class="footer__rights">
                 <p class="footer__text">All rights reserved 2023 - Funkoshop &copy;</p>
+                <p class="footer__text">CODO A CODO - Curso Java Script-Node JS</p>
+              <p class="footer__text"> Comision 23568 Grupo 7</p>
             </div>
             <div class="footer__logo ">
                 <img src="../../img/multimedia/branding/isotype.svg" alt="logo_FUNKOSHOP" class="footer__img">
