empiezo con js del shop

--- a/public/pages/shop/shop.html
+++ b/public/pages/shop/shop.html
@@ -97,187 +97,15 @@
         <main> <!-- Inicio Main -->
     
             <section class="catalogue">
-                <ul class="catalogue__grilla">
-                    <li class="catalogue__product">
-                        <article class="card-item">
-                            <a class="card-item__link" href="">
-                                <picture class="card-item__cover">
-                                    <span class="card-item__tag">Nuevo
-                                    </span>
-                                    <img class="card-item__img--front" src="/public/img/multimedia/star-wars/trooper-1.webp"
-                                        alt="Figura coleccionable Funko de un Stormtrooper de la serie Star Wars">
-                                    <img class="card-item__img--back" src="/public/img/multimedia/star-wars/trooper-box.webp" alt="">
-                                </picture>
-                                <div class="card-item__content">
-                                    <p class="card-item__licence">STAR WARS</p>
-                                    <h4 class="card-item__name">STORMTROOPER LIGHTSABER</h4>
-                                    <p class="card-item__price">$ 1799,99</p>
-                                    <p class="card-item__promo">3 CUOTAS SIN INTERÉS</p>
-                                </div>
-                            </a>
-                        </article>
-                    </li>
-                    <li class="catalogue__product">
-                        <article class="card-item">
-                            <a class="card-item__link" href="">
-                                <picture class="card-item__cover">
-                                    <span class="card-item__tag">Nuevo
-                                    </span>
-                                    <img class="card-item__img--front" src="/public/img/multimedia/pokemon/pidgeotto-1.webp"
-                                        alt="Figura coleccionable Funko de un Pidgeotto de la serie Pokemón">
-                                    <img class="card-item__img--back" src="/public/img/multimedia/pokemon/pidgeotto-box.webp" alt="">
-                                </picture>
-                                <div class="card-item__content">
-                                    <p class="card-item__licence">POKEMON</p>
-                                    <h4 class="card-item__name">PIDGEOTTO</h4>
-                                    <p class="card-item__price">$ 1799,99</p>
-                                    <p class="card-item__promo">3 CUOTAS SIN INTERÉS</p>
-                                </div>
-                            </a>
-                        </article>
-                    </li>
-                    <li class="catalogue__product">
-                        <article class="card-item">
-                            <a class="card-item__link" href="">
-                                <picture class="card-item__cover">
-                                    <span class="card-item__tag">Nuevo
-                                    </span>
-                                    <img class="card-item__img--front" src="/public/img/multimedia/harry-potter/luna-1.webp"
-                                        alt="Figura coleccionable Funko de Luna de la película Harry Potter">
-                                    <img class="card-item__img--back" src="/public/img/multimedia/harry-potter/luna-box.webp" alt="">
-                                </picture>
-                                <div class="card-item__content">
-                                    <p class="card-item__licence">HARRY POTTER</p>
-                                    <h4 class="card-item__name">LUNA LOVEGOOD LION MASK</h4>
-                                    <p class="card-item__price">$ 1799,99</p>
-                                    <p class="card-item__promo">3 CUOTAS SIN INTERÉS</p>
-                                </div>
-                            </a>
-                        </article>
-                    </li>
-
-                    <li class="catalogue__product">
-                        <article class="card-item">
-                            <a class="card-item__link" href="">
-                                <picture class="card-item__cover">
-                                    <span class="card-item__tag">Nuevo
-                                    </span>
-                                    <img class="card-item__img--front" src="/public/img/multimedia/star-wars/trooper-1.webp"
-                                        alt="Figura coleccionable Funko de un Stormtrooper de la serie Star Wars">
-                                    <img class="card-item__img--back" src="/public/img/multimedia/star-wars/trooper-box.webp" alt="">
-                                </picture>
-                                <div class="card-item__content">
-                                    <p class="card-item__licence">STAR WARS</p>
-                                    <h4 class="card-item__name">STORMTROOPER LIGHTSABER</h4>
-                                    <p class="card-item__price">$ 1799,99</p>
-                                    <p class="card-item__promo">3 CUOTAS SIN INTERÉS</p>
-                                </div>
-                            </a>
-                        </article>
-                    </li>
-                    <li class="catalogue__product">
-                        <article class="card-item">
-                            <a class="card-item__link" href="">
-                                <picture class="card-item__cover">
-                                    <span class="card-item__tag">Nuevo
-                                    </span>
-                                    <img class="card-item__img--front" src="/public/img/multimedia/pokemon/pidgeotto-1.webp"
-                                        alt="Figura coleccionable Funko de un Pidgeotto de la serie Pokemón">
-                                    <img class="card-item__img--back" src="/public/img/multimedia/pokemon/pidgeotto-box.webp" alt="">
-                                </picture>
-                                <div class="card-item__content">
-                                    <p class="card-item__licence">POKEMON</p>
-                                    <h4 class="card-item__name">PIDGEOTTO</h4>
-                                    <p class="card-item__price">$ 1799,99</p>
-                                    <p class="card-item__promo">3 CUOTAS SIN INTERÉS</p>
-                                </div>
-                            </a>
-                        </article>
-                    </li>
-                    <li class="catalogue__product">
-                        <article class="card-item">
-                            <a class="card-item__link" href="">
-                                <picture class="card-item__cover">
-                                    <span class="card-item__tag">Nuevo
-                                    </span>
-                                    <img class="card-item__img--front" src="/public/img/multimedia/harry-potter/luna-1.webp"
-                                        alt="Figura coleccionable Funko de Luna de la película Harry Potter">
-                                    <img class="card-item__img--back" src="/public/img/multimedia/harry-potter/luna-box.webp" alt="">
-                                </picture>
-                                <div class="card-item__content">
-                                    <p class="card-item__licence">HARRY POTTER</p>
-                                    <h4 class="card-item__name">LUNA LOVEGOOD LION MASK</h4>
-                                    <p class="card-item__price">$ 1799,99</p>
-                                    <p class="card-item__promo">3 CUOTAS SIN INTERÉS</p>
-                                </div>
-                            </a>
-                        </article>
-                    </li>
-                    <li class="catalogue__product">
-                        <article class="card-item">
-                            <a class="card-item__link" href="">
-                                <picture class="card-item__cover">
-                                    <span class="card-item__tag">Nuevo
-                                    </span>
-                                    <img class="card-item__img--front" src="/public/img/multimedia/star-wars/trooper-1.webp"
-                                        alt="Figura coleccionable Funko de un Stormtrooper de la serie Star Wars">
-                                    <img class="card-item__img--back" src="/public/img/multimedia/star-wars/trooper-box.webp" alt="">
-                                </picture>
-                                <div class="card-item__content">
-                                    <p class="card-item__licence">STAR WARS</p>
-                                    <h4 class="card-item__name">STORMTROOPER LIGHTSABER</h4>
-                                    <p class="card-item__price">$ 1799,99</p>
-                                    <p class="card-item__promo">3 CUOTAS SIN INTERÉS</p>
-                                </div>
-                            </a>
-                        </article>
-                    </li>
-                    <li class="catalogue__product">
-                        <article class="card-item">
-                            <a class="card-item__link" href="">
-                                <picture class="card-item__cover">
-                                    <span class="card-item__tag">Nuevo
-                                    </span>
-                                    <img class="card-item__img--front" src="/public/img/multimedia/pokemon/pidgeotto-1.webp"
-                                        alt="Figura coleccionable Funko de un Pidgeotto de la serie Pokemón">
-                                    <img class="card-item__img--back" src="/public/img/multimedia/pokemon/pidgeotto-box.webp" alt="">
-                                </picture>
-                                <div class="card-item__content">
-                                    <p class="card-item__licence">POKEMON</p>
-                                    <h4 class="card-item__name">PIDGEOTTO</h4>
-                                    <p class="card-item__price">$ 1799,99</p>
-                                    <p class="card-item__promo">3 CUOTAS SIN INTERÉS</p>
-                                </div>
-                            </a>
-                        </article>
-                    </li>
-                    <li class="catalogue__product">
-                        <article class="card-item">
-                            <a class="card-item__link" href="">
-                                <picture class="card-item__cover">
-                                    <span class="card-item__tag">Nuevo
-                                    </span>
-                                    <img class="card-item__img--front" src="/public/img/multimedia/harry-potter/luna-1.webp"
-                                        alt="Figura coleccionable Funko de Luna de la película Harry Potter">
-                                    <img class="card-item__img--back" src="/public/img/multimedia/harry-potter/luna-box.webp" alt="">
-                                </picture>
-                                <div class="card-item__content">
-                                    <p class="card-item__licence">HARRY POTTER</p>
-                                    <h4 class="card-item__name">LUNA LOVEGOOD LION MASK</h4>
-                                    <p class="card-item__price">$ 1799,99</p>
-                                    <p class="card-item__promo">3 CUOTAS SIN INTERÉS</p>
-                                </div>
-                            </a>
-                        </article>
-                    </li>
-                </ul>
+                <div class="catalogue__grilla">
+                </div>
             </section>
     
             <section">
                 <ul class="pagination__list">
                     <li><a href="#"><</a></li>
                     <li class="active"><a href="#">1</a></li>
-                    <li><a href="#">2</a></li>
+                    <li class="active"><a href="#">2</a></li>
                     <li><a href="#">...</a></li>
                     <li><a href="#">4</a></li>
                     <li><a href="#">5</a></li>
@@ -313,6 +141,7 @@
         </p>
     </footer> <!-- Fin Footer -->
     <script src="https://kit.fontawesome.com/d82e4588df.js" crossorigin="anonymous"></script>
+    <script src="/public/js-fede/shop.js"></script>
     <!-- <script src="https://cdn.jsdelivr.net/npm/iconify-icon@1.0.8/dist/iconify-icon.min.js"></script> -->
 </body>
 
