shop e item modificados

--- a/public/pages/shop/item.html
+++ b/public/pages/shop/item.html
@@ -58,40 +58,6 @@
     <main class="container">
       <!-- Seccion con el Baby Yoda BLUEBALL -->
       <section class="item">
-        <picture class="item__card">
-          <img
-            class="item__card-front"
-            src="../../img/multimedia/star-wars/baby-yoda-1.webp"
-            alt="Figura coleccionable de la serie The Mandolarian"
-          />
-          <img
-            class="item__card-back"
-            src="../../img/multimedia/star-wars/baby-yoda-box.webp"
-            alt="Figura coleccionable de la serie The Mandolarian"
-          />
-        </picture>
-        <article class="item__info">
-          <p class="item__info--license">STAR WARS</p>
-          <h3 class="item__info--name">BABY YODA BLUEBALL</h3>
-          <p class="item__info--description">
-            Figura coleccionable de Baby Yoda (Grogu) - The Mandalorian, edicion
-            limitada.
-          </p>
-          <p class="item__info--price">$ 1.799,99.-</p>
-
-          <div class="item__cart">
-            <button id="subtract" class="item__quantity" type="button">
-              -
-            </button>
-            <input class="item__input" type="text" placeholder="0" name="quantity" id="quantity">
-            <button id="add" class="item__quantity" type="button">+</button>
-            <button class="item__agregate" type="submit" id="addToCartBtn">
-              Agregar al carrito
-            </button>
-          </div>
-          <p class="item__promo">
-            <a href="#">Ver metodos de pago</a> - 3 CUOTAS SIN INTERES
-          </p>
         </article>
       </section>
       <section class="slider container glide">
@@ -213,6 +179,7 @@
           </div>
       </div>
   </footer>
+    <script src="../../js-fede/item-generator.js"></script>
     <script src="https://kit.fontawesome.com/d82e4588df.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/iconify-icon@1.0.8/dist/iconify-icon.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide@3.4.1/dist/glide.min.js"></script>
