--- a/public/pages/shop/shop.html
+++ b/public/pages/shop/shop.html
@@ -141,6 +141,7 @@
         </p>
     </footer> <!-- Fin Footer -->
     <script src="https://kit.fontawesome.com/d82e4588df.js" crossorigin="anonymous"></script>
+    <script src="/public/js-fede/productsData.js"></script>
     <script src="/public/js-fede/shop.js"></script>
     <!-- <script src="https://cdn.jsdelivr.net/npm/iconify-icon@1.0.8/dist/iconify-icon.min.js"></script> -->
 </body>
